--- a/admin/contacts.html
+++ b/admin/contacts.html
@@ -110,6 +110,14 @@
                                 <label>Message:</label>
                                 <p id="modalContactMessage"></p>
                             </div>
+                            <div class="form-group">
+                                <label for="modalContactStatus">Status:</label>
+                                <select id="modalContactStatus" class="form-control">
+                                    <option value="new">New</option>
+                                    <option value="in_progress">In Progress</option>
+                                    <option value="resolved">Resolved</option>
+                                </select>
+                            </div>
                             
                             <div class="modal-actions">
                                 <a id="replyEmailBtn" class="btn" style="display: none;">
